--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,17 +1,16 @@
 apply plugin: 'com.android.library'
 
-android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+apply plugin: 'com.github.dcendents.android-maven'
 
+group='com.github.jiang111'
+android {
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
     defaultConfig {
-        minSdkVersion 18
-        targetSdkVersion 24
+        minSdkVersion 15
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
     buildTypes {
         release {
@@ -22,10 +21,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    testCompile 'junit:junit:4.12'
+    compile "com.android.support:support-v4:23.+"
+
 }
